# entropic-instruction-following

./: .gitignore  LICENSE  README.md  digest.txt  generate_data.py  pyproject.toml  run_experiment.py
conf/: config.yaml
conf/model/: HuggingFaceTB-SmolLM-135M-Instruct.yaml  falcon.yaml  google-gemma-3-270m-it.yaml  llama.yaml  mistral.yaml  olmo.yaml  phi.yaml  qwen.yaml  qwen2.5-0.5.yaml  smol2-360.yaml
conf/strategy/: indexed.yaml  standard.yaml
data/raw/: dataset_v1.json
data/results/: model_comparison_summary.txt  results_Standard_Story_falcon.csv  results_Standard_Story_llama.csv  results_Standard_Story_mistral.csv  results_Standard_Story_olmo.csv  results_Standard_Story_qwen2.5-0.5.csv  results_Standard_Story_smol2-360.csv
data/results/Story_falcon/: analysis_summary.txt
data/results/Story_llama/: analysis_summary.txt
data/results/Story_mistral/: analysis_summary.txt
data/results/Story_olmo/: analysis_summary.txt
data/results/Story_phi/: analysis_summary.txt
data/results/Story_qwen2.5-0.5/: analysis_summary.txt
data/results/Story_smol2-360/: analysis_summary.txt
scripts/: analyze_results.py  generate_data.py  inference.py
src/: evaluator.py  generators.py  strategies.py  utils.py
src/analysis/: __init__.py  comparison.py  plot_token_visual_test.py  position_analysis.py  statistics.py  visualizations.py
