[project]
name = "entropic-instruction-following"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "omegaconf>=2.3.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "vllm>=0.11.2",
]
